gitops/manifests/gateway/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: streamforge-gateway
  labels:
    app.kubernetes.io/part-of: streamforge-infra
    app.kubernetes.io/component: gateway
  annotations:
    alb.networking.azure.io/alb-namespace: azure-alb-system
    alb.networking.azure.io/alb-name: alb-infra
spec:
  gatewayClassName: azure-alb-external
  listeners:
    - name: https-listener
      port: 443
      protocol: HTTPS
      hostname: "*.sudheer.fun"
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: streamforge-tls-secret
    - name: http-listener
      port: 80
      protocol: HTTP
      hostname: "*.sudheer.fun"
      allowedRoutes:
        namespaces:
          from: Same
