gitops/manifests/gateway/frontend-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-https-httproute
spec:
  parentRefs:
    - name: streamforge-gateway
      sectionName: https-listener
  hostnames:
    - "*.sudheer.fun"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sf-frontend-svc
          port: 80
